# SCLib_JZIS

./: .env.example  .gitignore  CLAUDE.md  DATASETS.md  DATA_SOURCES.md  JZIS_Unified_Auth_Plan.md  LICENSE-DATA  PROJECT_SPEC.md  README.md  SCLib_Google_OAuth_Implementation.md  SCLib_Materials_Schema_v2.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  alembic.ini  config.py  entrypoint.sh  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_materials_v2_schema.py  0003_unified_auth_google_oauth.py  0004_ingest_runs.py  0004_null_default_flags.py  0005_needs_review.py  0006_dashboard_phase_a.py  0007_ask_history_bookmarks.py  0008_backfill_nickelate_family.py  0009_cleanup_impossible_ambient.py  0010_data_cleanup_audit.py  0011_reclassify_nims_family.py  0012_flag_citation_conflation.py  0013_add_mp_id_columns.py  0014_strip_latex_from_display_formulas.py  0015_strip_bare_underscores.py  0016_strip_unpaired_dollars.py  0017_final_strip_all_markup.py  0018_clean_material_ids.py  0019_terminal_formula_cleanup.py  0020_strict_naming_validation.py  0021_gemini_audit_flags.py  0022_audit_infra.py  0023_reviewer_role.py  0024_formula_tightening_cleanup.py  0025_add_refuted_claims_manual_overrides.py  0026_fix_float32_artifacts.py  0027_widen_tc_columns_to_float8.py  0028_rename_arxiv_year_drop_topo_2d.py  0029_evidence_tier_columns.py  0030_audit_suggested_fixes.py  0031_parent_variant_interface.py  (+10 more)
api/models/: __init__.py  admin.py  db.py  personal.py  search.py  user.py
api/routers/: admin.py  ask.py  auth.py  bookmarks.py  deps.py  discovery.py  feedback.py  history.py  materials.py  papers.py  search.py  similar.py  stats.py  timeline.py  version.py
api/services/: audit_rules.py  audit_runner.py  auth_service.py  authors.py  email.py  genai_client.py  google_oauth.py  materials_project.py  rag.py  rate_limit.py  stats_refresh.py  vector_search.py
api/tests/: conftest.py  test_auth.py  test_bookmarks.py  test_dashboard.py  test_unified_auth.py
docs/: API.md  (+8 more)
ingestion/: .dockerignore  Dockerfile  pyproject.toml
ingestion/ingestion/: __init__.py  aps_batch.py  aps_pipeline.py  aps_storage.py  config.py  genai_client.py  hydride_parameters.py  models.py  nims.py  pipeline.py  rener.py  storage.py
ingestion/tests/: test_aps_batch.py  test_aps_harvest.py  test_aps_pipeline.py  test_aps_storage.py  test_aps_xml.py  test_build_aps_manifest.py  test_embedder.py  test_fact_sentences.py  test_formula_validator.py  test_hydride_ner.py  test_hydride_parameters_runner.py  test_materials_aggregator_display.py
(+144 files in other folders)
