[project]
name = "sclib-api"
version = "0.1.0"
description = "SCLib_JZIS FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",  # for alembic sync migrations
    "alembic>=1.14",

    # Redis
    "redis>=5.2",

    # Config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",

    # Auth
    "authlib>=1.3",
    "bcrypt>=4.2",
    "itsdangerous>=2.1",
    "pyjwt>=2.10",

    # Email
    "resend>=2.4",

    # GCP
    "google-cloud-aiplatform>=1.74",
    "google-cloud-storage>=2.18",

    # Misc
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "config.py",
    "routers",
    "services",
    "models",
    "alembic",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
