[project]
name = "sclib-ingestion"
version = "0.1.0"
description = "SCLib_JZIS paper ingestion pipeline — arXiv → GCS → parse → chunk → embed → Vertex VS + Postgres"
requires-python = ">=3.11"
dependencies = [
    # arXiv + HTTP
    "httpx>=0.27",
    "tenacity>=9.0",
    # LaTeX / PDF parsing
    "pylatexenc>=2.10",
    # Chunking (token counts)
    "tiktoken>=0.8",
    # GCP
    "google-cloud-storage>=2.18",
    "google-cloud-aiplatform>=1.70",
    "google-genai>=0.3",
    # Database (shared with api/ but declared locally to keep the package
    # independently installable)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    # Settings
    "pydantic-settings>=2.6",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
sclib-ingest = "ingestion.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.ruff]
line-length = 100
target-version = "py311"
